Fixing button mana alignment, handling cards which have no color identity.

--- a/decky/static/sass/_buttons.scss
+++ b/decky/static/sass/_buttons.scss
@@ -121,7 +121,7 @@ button {
 	.mana.small { 
 		/* Mana Icons*/
 		position: relative;
-		top: 3px;
+		top: 1px;
 		margin-right: 0.25rem;
 	}
 }
